# xtrade

./: .gitignore  README.md  pyproject.toml
config/: instrument_meta.yaml  risk.example.yaml  risk.mainnet.yaml  scanner.spcxusdt_threshold_ladder.yaml  strategy.spcxusdt_short_mcap.yaml  supervisor.example.yaml  supervisor.mainnet.spcxusdt.example.yaml  universe.example.yaml  venues.binance_futures.mainnet.yaml  venues.binance_futures.testnet.yaml  venues.binance_spot.testnet.yaml  venues.example.yaml  venues.hyperliquid.testnet.yaml  venues.testnet.yaml
config/research/: news_keywords.example.yaml
deploy/env/: xtrade.env.example
deploy/logrotate/: xtrade
deploy/systemd/: xtrade-bridge.service.in  xtrade-scanner.service.in  xtrade-scanner.timer.in  xtrade-supervisor.service.in
deploy/tmpfiles/: xtrade.conf
docs/: phase0_results.md  phase1_brief.md  phase1_results.md  phase2_brief.md  phase2_results.md  phase3_brief.md  phase3_results.md  phase3_runbook_testnet.md  phase4_brief.md  phase4_results.md  phase4_runbook_vps.md  phase5_brief.md  phase5_results.md  phase5_track_c_brief.md  phase6_brief.md  phase6_runbook_vps.md  tradexyz_discovery.json
scripts/phase0/: 01_check_install.py  02_binance_testnet_connectivity.py  02b_binance_spot_testnet_connectivity.py  03_hyperliquid_testnet_connectivity.py  04_discover_hyperliquid_perp_dexs.py  05_tradexyz_market_data.py  06_binance_stock_perp_data.py  07_fetch_binance_history.py  08_sample_backtest.py  _common.py  check_binance_keys.py
scripts/phase1/: 01_node_health.py  02_live_run.py  __init__.py
scripts/phase2/: 01_inspect_universe.py  02_scan_momentum.py  03_scan_all.py  04_signal_queue_demo.py
scripts/phase4/: 01_drill_sigkill.sh  02_state_gc.py  03_drill_oom.sh  04_drill_network.sh  05_smoke_postdeploy.sh  06_drill_openclaw_outage.sh  install_vps.sh  uninstall_vps.sh
scripts/phase6/: 01_daily_holding_report.sh  02_preflight_mainnet.sh
src/xtrade/: __init__.py  cli.py  config.py  observability.py
src/xtrade/approval/: __init__.py  gate.py  queue.py
src/xtrade/backtest/: __init__.py  runner.py
src/xtrade/bridge/: __init__.py  alerter.py  audit.py  inbound.py  openclaw_webhook.py  schema.py
src/xtrade/data/: __init__.py  binance_klines.py  catalog.py  hyperliquid_hip3.py  instruments.py
src/xtrade/instruments/: __init__.py  meta.py
src/xtrade/live/: __init__.py  binance_futures_mainnet.py  drawdown.py  heartbeat.py  mainnet_unlock.py  mcap_softkill.py  persistent_executor.py  runner.py  sentinel.py  signal_runner.py  sizing.py  supervisor.py
src/xtrade/node/: __init__.py  factory.py  (+1 more)
tests/: _paper_replay_runner.py  _paper_runner_subprocess.py  _parity_nautilus_runner.py  test_approval_dispatch_annotation.py  test_approval_gate.py  test_backtest_smoke.py  test_binance_futures_mainnet.py  test_binance_klines.py  test_bridge_alerter.py  test_bridge_inbound.py  test_bridge_openclaw_webhook.py  test_bridge_out_audit.py  test_bridge_schema.py  test_catalog.py  test_cli.py  test_cli_approve.py  test_cli_emergency_close.py  test_cli_holding_report.py  test_cli_import_footprint.py  test_cli_live_signal.py  test_cli_live_supervise.py  test_cli_ops.py  test_cli_paper.py  test_cli_research_promote.py  test_cli_risk.py  test_cli_scan.py  test_cli_strategy.py  test_config.py  test_deploy_env_template.py  test_deploy_install_vps.py  test_deploy_systemd_units.py  test_drawdown_watcher.py  test_frames.py  test_gridsearch.py  test_heartbeat_watcher.py  test_holding_report.py  test_instrument_meta.py  test_live_runner.py  test_live_signal_runner.py  test_log_event.py  (+49 more)
(+47 files in other folders)
