[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtrade"
version = "0.0.1"
description = "xtrade — multi-venue automated trading research project"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "xtrade" }]

# Runtime dependencies. NautilusTrader is the engine; httpx is used for
# raw Hyperliquid info-endpoint queries (no SDK needed). typer is the
# CLI framework for the `xtrade` console entry point.
dependencies = [
    "nautilus_trader>=1.227",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
xtrade = "xtrade.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
