[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtrade"
version = "0.0.1"
description = "xtrade — multi-venue automated trading research project"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "Proprietary" }
authors = [{ name = "xtrade" }]

# Runtime dependencies. NautilusTrader is the engine; httpx is used for
# raw Hyperliquid info-endpoint queries (no SDK needed). typer is the
# CLI framework for the `xtrade` console entry point.
dependencies = [
    "nautilus_trader>=1.227",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    # Phase 2 research / scanner layer — vectorbt drives indicator
    # computation, parameter grid search, and Portfolio.from_signals
    # metric evaluation. See docs/phase2_brief.md.
    "vectorbt>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# Phase 5 Track B — ML / news sentiment research stack. Kept OUT of
# runtime deps so supervisor/bridge stay slim. Install with
# `uv pip install -e '.[research]'` on the local research box.
research = [
    "pyarrow>=15.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "numpy>=1.26",
]

[project.scripts]
xtrade = "xtrade.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
